--- a/gradle/android-mixed-java-kotlin-project/app/src/main/res/layout/activity_main2.xml
+++ b/gradle/android-mixed-java-kotlin-project/app/src/main/res/layout/activity_main2.xml
@@ -1,24 +1,26 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:paddingLeft="@dimen/activity_horizontal_margin"
-              android:paddingRight="@dimen/activity_horizontal_margin"
-              android:paddingTop="@dimen/activity_vertical_margin"
-              android:paddingBottom="@dimen/activity_vertical_margin"
-              tools:context=".MainActivity">
+<?xml version="1.0" encoding="utf-8"?>
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
+    <data>
+    </data>
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingBottom="@dimen/activity_vertical_margin">
 
-    <TextView
+        <TextView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="Activity 2" />
 
-    <Button android:text="Next"
+        <Button android:text="Next"
             android:id="@+id/Button02"
-            android:layout_width="250px"
-            android:textSize="18px"
-            android:layout_height="55px">
-    </Button>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+        </Button>
 
-</LinearLayout>
+    </LinearLayout>
+</layout>
